# ia-dev-environment

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Conventions.md  Dockerfile  README.md  coverage.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/: README.md  settings.json
.codex/: config.toml  requirements.toml
.githooks/: pre-push
.github/: copilot-instructions.md  dependabot.yml
adr/: ADR-0001-intentional-architectural-deviations-for-cli-tool.md  ADR-0002-skill-delegation-protocol.md  ADR-0003-skill-taxonomy-and-naming.md  ADR-0004-worktree-first-branch-creation-policy.md  ADR-0005-telemetry-architecture.md  ADR-0006-file-conflict-aware-parallelism.md  ADR-0007-console-progress-reporter-stdout-contract.md  ADR-0008-hybrid-hex-core-and-flat-cli-layout.md  ADR-0009-wide-records-bound-to-external-schemas.md  ADR-0010-interactive-gates-convention.md  ADR-0011-shared-snippets-inclusion-strategy.md  ADR-0012-skill-body-slim-by-default.md  ADR-0013-knowledge-packs-dedicated-directory.md  ADR-0014-task-hierarchy-and-phase-gates.md  ADR-0015-audit-gate-lifecycle.md  ADR-0048-B-claude-md-contract.md  ADR-0048-java-only-scope.md  README.md
audits/: execution-integrity-baseline.txt  interactive-gates-baseline.txt  lifecycle-integrity-baseline.txt  skill-size-baseline.txt  task-hierarchy-baseline.txt
claude_setup/: __main__.py  config.py  exceptions.py  interactive.py  models.py  template_engine.py  utils.py  verifier.py
docs/: audit-gates-catalog.md
java/: CHANGELOG.md  README.md  (+3 more)
(+7745 files in other folders)
