[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ia-dev-environment"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1,<9.0",
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1.3,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ia-dev-env = "claude_setup.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/claude_setup"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
